--- a/refs.bib
+++ b/refs.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Benjamin Reddy at 2017-11-26 20:26:22 -0600 
+%% Created for Benjamin Reddy at 2018-08-07 15:47:10 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -3933,13 +3933,13 @@
 	Title = {{A nonparametric Bayesian alternative to spike sorting}},
 	Volume = {173},
 	Year = {2008}}
-	
+
 @book{bingham1989,
-  title={Regular variation},
-  author={Bingham, Nicholas H and Goldie, Charles M and Teugels, Jef L},
-  volume={27},
-  year={1989},
-  publisher={Cambridge University Press}}
+	Author = {Bingham, Nicholas H and Goldie, Charles M and Teugels, Jef L},
+	Publisher = {Cambridge University Press},
+	Title = {Regular variation},
+	Volume = {27},
+	Year = {1989}}
 
 @misc{snapnets,
 	Author = {Jure Leskovec and Andrej Krevl},
@@ -3948,7 +3948,7 @@
 	Howpublished = {\url{http://snap.stanford.edu/data}},
 	Month = jun,
 	Title = {{SNAP Datasets}: {Stanford} Large Network Dataset Collection},
-Year = 2014}
+	Year = 2014}
 
 @article{clauset,
 	Author = {Aaron Clauset and Cosma Rohilla Shalizi and Newman, M. E. J.},
@@ -3963,94 +3963,82 @@ Year = 2014}
 	Bdsk-Url-1 = {http://dx.doi.org/10.1137/070710111}}
 
 @article{CraneDempsey2017,
-  title={Edge exchangeable models for interaction networks},
-  author={Crane, Harry and Dempsey, Walter},
-  journal={Journal of the American Statistical Association},
-  number={just-accepted},
-  year={2017},
-  publisher={Taylor \& Francis}
-}
+	Author = {Crane, Harry and Dempsey, Walter},
+	Date-Modified = {2018-08-07 15:47:10 +0100},
+	Journal = {Journal of the American Statistical Association},
+	Note = {In press},
+	Publisher = {Taylor \& Francis},
+	Title = {Edge exchangeable models for interaction networks},
+	Year = {2017}}
 
 @article{Bloem2017,
-  title={Preferential Attachment and Vertex Arrival Times},
-  author={Bloem-Reddy, Benjamin and Orbanz, Peter},
-  journal={arXiv preprint arXiv:1710.02159},
-  year={2017}
-}
+	Author = {Bloem-Reddy, Benjamin and Orbanz, Peter},
+	Journal = {arXiv preprint arXiv:1710.02159},
+	Title = {Preferential Attachment and Vertex Arrival Times},
+	Year = {2017}}
 
 @inproceedings{cai2016,
-  title={Edge-exchangeable graphs and sparsity},
-  author={Cai, Diana and Campbell, Trevor and Broderick, Tamara},
-  booktitle={Advances in Neural Information Processing Systems},
-  pages={4249--4257},
-  year={2016}
-}
+	Author = {Cai, Diana and Campbell, Trevor and Broderick, Tamara},
+	Booktitle = {Advances in Neural Information Processing Systems},
+	Pages = {4249--4257},
+	Title = {Edge-exchangeable graphs and sparsity},
+	Year = {2016}}
 
 @inproceedings{bloem2018,
-  title={Sampling and Inference for Beta Neutral-to-the-Left Models
-of Sparse Networks},
-  author={Bloem-Reddy, Benjamin and Foster, Adam and Mathieu, Emile and Teh, Yee Whye},
-  booktitle={UAI (to appear)},
-  year={2018}
-}
+	Author = {Bloem-Reddy, Benjamin and Foster, Adam and Mathieu, Emile and Teh, Yee Whye},
+	Booktitle = {UAI (to appear)},
+	Title = {Sampling and Inference for Beta Neutral-to-the-Left Models of Sparse Networks},
+	Year = {2018}}
 
 @article{hoover1979,
-	title={Relations on probability spaces and arrays of random variables},
-	author={Hoover, Douglas N},
-	journal={Preprint, Institute for Advanced Study, Princeton, NJ},
-	volume={2},
-	year={1979}
-}
+	Author = {Hoover, Douglas N},
+	Journal = {Preprint, Institute for Advanced Study, Princeton, NJ},
+	Title = {Relations on probability spaces and arrays of random variables},
+	Volume = {2},
+	Year = {1979}}
 
 @article{aldous1981,
-	title={Representations for partially exchangeable arrays of random variables},
-	author={Aldous, David J},
-	journal={Journal of Multivariate Analysis},
-	volume={11},
-	number={4},
-	pages={581--598},
-	year={1981},
-	publisher={Elsevier}
-}
+	Author = {Aldous, David J},
+	Journal = {Journal of Multivariate Analysis},
+	Number = {4},
+	Pages = {581--598},
+	Publisher = {Elsevier},
+	Title = {Representations for partially exchangeable arrays of random variables},
+	Volume = {11},
+	Year = {1981}}
 
 @article{caronfox,
-	title={Sparse graphs using exchangeable random measures},
-	author={Caron, Fran{\c{c}}ois and Fox, Emily B},
-	journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
-	volume={79},
-	number={5},
-	pages={1295--1366},
-	year={2017},
-	publisher={Wiley Online Library}
-}
+	Author = {Caron, Fran{\c{c}}ois and Fox, Emily B},
+	Journal = {Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+	Number = {5},
+	Pages = {1295--1366},
+	Publisher = {Wiley Online Library},
+	Title = {Sparse graphs using exchangeable random measures},
+	Volume = {79},
+	Year = {2017}}
 
 @article{barabasi1999,
-	title={Emergence of scaling in random networks},
-	author={Barab{\'a}si, Albert-L{\'a}szl{\'o} and Albert, R{\'e}ka},
-	journal={science},
-	volume={286},
-	number={5439},
-	pages={509--512},
-	year={1999},
-	publisher={American Association for the Advancement of Science}
-}
+	Author = {Barab{\'a}si, Albert-L{\'a}szl{\'o} and Albert, R{\'e}ka},
+	Journal = {science},
+	Number = {5439},
+	Pages = {509--512},
+	Publisher = {American Association for the Advancement of Science},
+	Title = {Emergence of scaling in random networks},
+	Volume = {286},
+	Year = {1999}}
 
 @article{simon1955,
-	title={On a class of skew distribution functions},
-	author={Simon, Herbert A},
-	journal={Biometrika},
-	volume={42},
-	number={3/4},
-	pages={425--440},
-	year={1955},
-	publisher={JSTOR}
-}
+	Author = {Simon, Herbert A},
+	Journal = {Biometrika},
+	Number = {3/4},
+	Pages = {425--440},
+	Publisher = {JSTOR},
+	Title = {On a class of skew distribution functions},
+	Volume = {42},
+	Year = {1955}}
 
 @article{linderman2017,
-	title={Reparameterizing the Birkhoff polytope for variational permutation inference},
-	author={Linderman, Scott W and Mena, Gonzalo E and Cooper, Hal and Paninski, Liam and Cunningham, John P},
-	journal={arXiv preprint arXiv:1710.09508},
-	year={2017}
-}
-
-
+	Author = {Linderman, Scott W and Mena, Gonzalo E and Cooper, Hal and Paninski, Liam and Cunningham, John P},
+	Journal = {arXiv preprint arXiv:1710.09508},
+	Title = {Reparameterizing the Birkhoff polytope for variational permutation inference},
+	Year = {2017}}
